Ajout formulaire connexion

--- a/vues/v_accueil.html
+++ b/vues/v_accueil.html
@@ -9,7 +9,7 @@
                 L'entité Galaxy Swiss Bourdin Europe a établi son siège administratif à Paris.
                 Le siège social de la multinationale est situé à Philadelphie, Pennsylvalnie, aux Etats-Unis</strong>
             </p>
-            <a href="index.php?uc=connexion">
+            <a href="index.php?uc=connexion&action=connexion">
                 <button type="submit" class="btn rounded-pill btn-outline-light px-4 me-4 light-300">Se connecter</button>
             </a>
         </div>
