Modification style + affichage

--- a/vues/v_footer.html
+++ b/vues/v_footer.html
@@ -1,7 +1,7 @@
 <!-- Start Footer -->
 
 <div id="foot">
-<footer class="bg-secondary pt-4">
+<footer class="bg-info pt-4">
     <div class="container">
         <div class="row py-4">
             <div class="col-lg-3 col-12 align-left">
@@ -33,7 +33,7 @@
         </div>
     </div>
 
-    <div class="w-100 bg-primary py-3">
+    <div class="w-100 footercustom py-3">
         <div class="container">
             <div class="row pt-2">
                 <div class="col-lg-6 col-sm-12">
