Ajout debut systeme connexion + fix bug mvc

--- a/vues/v_footer.html
+++ b/vues/v_footer.html
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row py-4">
             <div class="col-lg-3 col-12 align-left">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="index.php?uc=accueil">
                     <span class="text-light h5"><u>Projet GSB</u></span>
                 </a>
                 <p class="text-light my-lg-4 my-2">
@@ -20,10 +20,10 @@
                             <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light" href="index.php?uc=accueil">Accueil</a>
                         </li>
                         <li class="pb-2">
-                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="index.php?uc=medicaments">Médicaments</a>
+                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="index.php?uc=medicaments&action=formulairemedoc">Médicaments</a>
                         </li>
                         <li class="pb-2">
-                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="index.php?uc=praticiens">Praticiens</a>
+                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="index.php?uc=praticiens&action=formulairepraticien">Praticiens</a>
                         </li>
                         <li class="pb-2">
                             <i class='bx-fw bx bxs-chevron-right bx-xs'></i></i><a class="text-decoration-none text-light py-1" href="index.php?uc=rapportdevisite">Rapport de visite</a>
@@ -38,7 +38,7 @@
             <div class="row pt-2">
                 <div class="col-lg-6 col-sm-12">
                     <p class="text-lg-start text-center text-light light-300">
-                        © Copyright 2021 Randy Durelle.
+                        © Copyright 2021 Randy Durelle | Tristan Da Silva.
                     </p>
                 </div>
             </div>
