--- a/vues/v_footer.html
+++ b/vues/v_footer.html
@@ -1,5 +1,3 @@
-<!-- Start Footer -->
-
 <div id="foot">
 <footer class="bg-info pt-4">
     <div class="container">
@@ -47,7 +45,6 @@
 
 </footer>
 </div>
-<!-- End Footer -->
 
 
 <!-- Bootstrap -->
@@ -82,11 +79,9 @@
         });
     });
 </script>
-<!-- Templatemo -->
-<script src="assets/js/templatemo.js"></script>
-<!-- Custom -->
+
+<script src="assets/js/gsb.js"></script>
 <script src="assets/js/custom.js"></script>
 
 </body>
-
 </html>
