--- a/vues/v_footer.html
+++ b/vues/v_footer.html
@@ -24,7 +24,7 @@
                             <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="index.php?uc=praticiens&action=formulairepraticien">Praticiens</a>
                         </li>
                         <li class="pb-2">
-                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i></i><a class="text-decoration-none text-light py-1" href="index.php?uc=rapportdevisite">Rapport de visite</a>
+                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i></i><a class="text-decoration-none text-light py-1" href="index.php?uc=rapportdevisite&action=redigerrapport">Rapport de visite</a>
                         </li>
                     </ul>
             </div>
