--- a/vues/v_footer.html
+++ b/vues/v_footer.html
@@ -47,21 +47,17 @@
 </div>
 
 
-<!-- Bootstrap -->
 <script src="assets/js/bootstrap.bundle.min.js"></script>
-<!-- Lightbox -->
+
 <script src="assets/js/fslightbox.js"></script>
-<script>
-    fsLightboxInstances['gallery'].props.loadOnlyCurrentSource = true;
-</script>
-<!-- Load jQuery require for isotope -->
+<script> fsLightboxInstances['gallery'].props.loadOnlyCurrentSource = true; </script>
+
 <script src="assets/js/jquery.min.js"></script>
-<!-- Isotope -->
 <script src="assets/js/isotope.pkgd.js"></script>
-<!-- Page Script -->
+
 <script>
     $(window).load(function() {
-        // init Isotope
+
         var $projects = $('.projects').isotope({
             itemSelector: '.project',
             layoutMode: 'fitRows'
