--- a/vues/v_footer.html
+++ b/vues/v_footer.html
@@ -1,5 +1,5 @@
 <div id="foot">
-<footer class="bg-info pt-4">
+<footer class="pt-4">
     <div class="container">
         <div class="row py-4">
             <div class="col-lg-3 col-12 align-left">
